cluster-viz/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-viz
  namespace: cluster-viz
spec:
  selector:
    app: cluster-viz
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
